--- a/config/newApiConfig.json
+++ b/config/newApiConfig.json
@@ -1,6 +1,6 @@
 {
     "alert": "Created by James Poole",
-    "prominentAlert": "",
+    "prominentAlert": "Super Earth High Command are aware of issues fetching data in the app. Stand by while the issue is resolved!",
     "season": "801",
     "showIlluminate": false,
     "apiAddress": "https://api.helldivers2.dev/api/v1/",
