--- a/config/newApiConfig.json
+++ b/config/newApiConfig.json
@@ -1,6 +1,6 @@
 {
     "alert": "Created by James Poole",
-    "prominentAlert": "Update War Monitor in the App Store to gain access to the SUPERSTORE and Armory!",
+    "prominentAlert": "There are some reports the SUPERSTORE update isn't showing in the App Store - stayed tuned and check back later!",
     "season": "801",
     "showIlluminate": false,
     "apiAddress": "https://api.helldivers2.dev/api/v1/",
