--- a/config/newApiConfig.json
+++ b/config/newApiConfig.json
@@ -1,6 +1,6 @@
 {
     "alert": "Created by James Poole",
-    "prominentAlert": "Some divers are experiencing issues with the Superstore - stayed tuned and check back later!",
+    "prominentAlert": "",
     "season": "801",
     "showIlluminate": false,
     "apiAddress": "https://api.helldivers2.dev/api/v1/",
