--- a/config/newApiConfig.json
+++ b/config/newApiConfig.json
@@ -2,7 +2,7 @@
     "alert": "Created by James Poole",
     "prominentAlert": "",
     "season": "801",
-    "showIlluminate": true,
+    "showIlluminate": false,
     "apiAddress": "https://api.helldivers2.dev/api/v1/",
     "startedAt": "2024-02-10T07:20:30.089979Z"
     
