--- a/config/newApiConfig.json
+++ b/config/newApiConfig.json
@@ -1,6 +1,6 @@
 {
     "alert": "Created by James Poole",
-    "prominentAlert": "",
+    "prominentAlert": "Check the App Store soon for an update to War Monitor! STRATAGEM HERO is now available on older Apple Watches!",
     "season": "801",
     "showIlluminate": false,
     "apiAddress": "https://api.helldivers2.dev/api/v1/",
